<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/fp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fp_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/fp_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fp_title"
        android:layout_marginTop="24dp"
        android:text="@string/fp_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fp_email_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fp_description"
        android:layout_marginTop="12dp"
        android:hint="@string/label_email">

        <EditText
            android:id="@+id/fp_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fp_continue_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_label"
        android:backgroundTint="@color/red_600"
        android:textColor="@android:color/white" />

</RelativeLayout>
